# gemma4-mnn-android

./: .gitignore  .gitmodules  LICENSE  README.md  convert.sh  setup.sh
docs/: build-apk.md
patches/: 001-android-disable-firebase.patch  002-gemma4-kv-projection-patch.patch  003-custom-version-and-package-name.patch  004-gemma4-thinking-support.patch  005-gemma4-chat-template-injection.patch  006-fix-gpt-oss-channel-detection.patch
src/: build.gradle.kts  gradle.properties  settings.gradle.kts
src/app/: build.gradle.kts  proguard-rules.pro
src/app/src/main/: AndroidManifest.xml
src/app/src/main/cpp/: CMakeLists.txt  mnn_jni.cpp
src/app/src/main/java/com/tiggy/gemma4mnn/: Gemma4App.kt  MainActivity.kt
src/app/src/main/java/com/tiggy/gemma4mnn/data/: ChatRepository.kt  ModelRepository.kt  SettingsRepository.kt
src/app/src/main/java/com/tiggy/gemma4mnn/data/db/: ChatDatabase.kt  ChatMessageDao.kt  ChatMessageEntity.kt  ChatSessionDao.kt  ChatSessionEntity.kt
src/app/src/main/java/com/tiggy/gemma4mnn/di/: AppModule.kt
src/app/src/main/java/com/tiggy/gemma4mnn/engine/: MnnEngine.kt  MnnSession.kt
src/app/src/main/java/com/tiggy/gemma4mnn/model/: ChatMessage.kt  ModelConfig.kt
src/app/src/main/java/com/tiggy/gemma4mnn/parser/: ChannelParser.kt
src/app/src/main/java/com/tiggy/gemma4mnn/ui/chat/: ChatInput.kt  ChatScreen.kt  ChatTopBar.kt  EmptyChat.kt  MessageBubble.kt  MessageList.kt  (+2 more)
src/app/src/main/java/com/tiggy/gemma4mnn/viewmodel/: ChatViewModel.kt
src/app/src/main/res/drawable/: ic_launcher_foreground.xml
src/app/src/main/res/values/: strings.xml  themes.xml
src/app/src/test/java/com/tiggy/gemma4mnn/parser/: ChannelParserTest.kt
(+4 files in other folders)
